--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
-body{
+body, html{
     background-color: #010101;
     font-family: Inter ;
     scroll-behavior: smooth;
 }
+
+
